# ContactsList

./: Button.qml  CMakeLists.txt  Contact.qml  ContactView.qml  ContactsModel.cpp  ContactsModel.h  CustomTextInput.qml  Header.qml  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
android/assets/: android_rcc_bundle.rcc
android/res/values/: libs.xml
android/src/com/example/contactslist/: MainActivity.java
